# jw_test

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: conftest.py  pytest.ini
src/api/v1/: serializers.py  urls.py  views.py
src/api/v1/tests/pages/: test_page_detail_read.py  test_pages_list_read.py
src/main/: admin.py  tasks.py
src/main/fixtures/: test_subtitle.srt
src/main/migrations/: 0001_initial.py  0002_create_demo_data.py  0003_page_block_ordering.py  0004_page_block_related_name.py  0005_content_related_name.py
src/main/models/: __init__.py  content.py  page.py
src/main/services/: contents.py
src/project/: celery.py  urls.py
src/project/settings/: __init__.py  base.py  celery.py
src/test/: api_client.py  factory.py
