[tool.poetry]
name = "jw_test"
version = "0.1.0"
description = ""
authors = ["alfa24"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
django-model-utils = "^4.1.1"
celery = "^5.1.2"
psycopg2-binary = "^2.9.1"
lorem = "^0.1.1"
django-admin-sortable2 = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
